# alpha10x-test

./: .gitignore  README.md  pyproject.toml  server.env.example
src/: main.py
src/api/routes/: large_tech_companies.py  organizations.py  transformed_organizations.py
src/core/: config.py
src/models/: organization.py  transformed_organization.py
src/services/: external_service.py
src/tests/: conftest.py
src/tests/services/: test_external_service.py
